refactor: 重构双拼生成

--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,12 @@
 [Config]
+; 0形码|1双拼|2音形|3不定长
+方案类型 = 0
 ;
-组词规则 = "2=AABB,3=ABCC,n=ABCZ"
+组词规则 = "2:AABB,3:ABCC,:ABCZ"
+; 双拼或音形需要指定
+拼音映射 = .\assets\shuangpin\daniu.txt
+; 音形的规则，用 . 表示声母
+; 两笔  组词规则 = "2:A.AbB.Bb,3:A.B.C.Cb,:A.B.C.Z."
 ;
 简码规则 = "1=3,2=2,4=99"
 ; 0否|1是
