chore: remove Config.Type

--- a/sample/86五笔.ini
+++ b/sample/86五笔.ini
@@ -1,10 +1,11 @@
 [Config]
-; 方案类型 0形码|1双拼|2音形|3整句
-Type = 0
 ; 自动生成编码规则
 Rule = 2:a1+a2+b1+b2, \
     3:a1+b1+c1+c2, \
     :a1+b1+c1+z1
+
+; 按编码排序
+Sort = 1
 
 [Dict]
 ; 主要码表部分
