--- a/sample/sample.ini
+++ b/sample/sample.ini
@@ -1,34 +1,32 @@
 [Config]
-; 方案类型 0形码|1双拼|2音形|3整句
-Type = 0
 ; 自动生成编码规则
 ; Y 音用大写字母，X 形用小写字母
-; Type = 0
 Rule = 2:a1+a2+b1+b2, \
     3:a1+b1+c1+c2, \
     :a1+b1+c1+z1
-; Type = 1, Y 2码 X 2码
-; Rule = "
-;     2:A+B,
-;     3:A1+A2+B1+C1,
-;     :A1+B1+C1+Z1"
-; ; Type = 1 键道6顶功, Y 2码 X 4码
-; Rule = "
-;     2:A+B+a1+b1,
-;     3:A1+B1+C1+a1+b1+c1,
-;     :A1+B1+C1+Z1+a1+b1"
-; ; Type = 2, 两笔，Y 1码 X 3码
-; Rule = "
-;     2:A+a1+B+b1,
-;     3:A+a1+B+C,
-;     :A+B+C+Z"
-; ; Type = 2, 星空两笔顶功 Y 1码 X 5码
-; Rule = "
-;     2:A+a1+B+b1+a2+b2,
-;     3:A+B+C+a2+b2+c2,
-;     :A+B+C+Z+a2+b2"
-; ; Type = 3, 红辣椒五笔？
-; Rule = "a1a2++"
+
+; 双拼Y 2码 X 2码
+Rule = 2:A+B, \
+    3:A1+A2+B1+C1, \
+    :A1+B1+C1+Z1
+
+; 键道6顶功, Y 2码 X 4码
+Rule = 2:A+B+a1+b1, \
+    3:A1+B1+C1+a1+b1+c1, \
+    :A1+B1+C1+Z1+a1+b1
+
+; 两笔，Y 1码 X 3码
+Rule = 2:A+a1+B+b1, \
+    3:A+a1+B+C, \
+    :A+B+C+Z
+
+; 星空两笔顶功 Y 1码 X 5码
+Rule = 2:A+a1+B+b1+a2+b2, \
+    3:A+B+C+a2+b2+c2, \
+    :A+B+C+Z+a2+b2
+
+; 红辣椒五笔？
+Rule = a1a2++
 
 ; 出简规则 0不|1出简不出全|2出简保留全码|3出简全码置后
 
@@ -42,15 +40,19 @@ Sort = 0
 词组	code
 
 ; 自动生成编码
-?单
-?词组
-; 拼音辅助生成单字
+单
+词组
+
+; 拼音辅助生成单字，前面加西文问号
 ?单	shan
 ; 拼音辅助生成词组
 ?会计	kuai ji
 
 ; 引入其他文件的内容
 >>(86.txt)
+
+; 引入拼音词库，并自动生成编码
+?>>(pinyin.txt)
 
 [Check]
 ; 校验已有的多多格式词库
