perf: 完善整句规则

--- a/sample/sample.ini
+++ b/sample/sample.ini
@@ -25,8 +25,12 @@ Rule = 2:A+a1+B+b1+a2+b2, \
     3:A+B+C+a2+b2+c2, \
     :A+B+C+Z+a2+b2
 
-; 红辣椒五笔？
-Rule = a1+a2..
+; 红辣椒五笔
+Rule = :n1+n2..
+
+; 双拼？空格分隔（用_代替）
+Rule = :N.._
+
 
 ; 出简规则 0不|1出简不出全|2出简保留全码|3出简全码置后
 
