remove section Correct

--- a/sample/星辰双拼.ini
+++ b/sample/星辰双拼.ini
@@ -9,6 +9,9 @@ Sort = 0
 
 [Dict]
 ; 主要码表部分
+人参	rkiz
+给予	jiyu
+给予	gvyu
 ?>>(sample/小轻多音字频.txt)
 阿敖
 阿巴巴
@@ -18,11 +21,6 @@ Sort = 0
 阿贝多
 排面
 还很
-
-[Correct]
-; 对音码方案，一个词可能生成多个编码，可以在这里修正
-人参	rkiz
-给予	jiyu gvyu
 
 [Char]
 ; 生成编码所需，每个字可以有多个编码
