--- a/sample/sample.ini
+++ b/sample/sample.ini
@@ -31,9 +31,10 @@ Rule = :n1+n2..
 ; 双拼？空格分隔（用_代替）
 Rule = :N.._
 
-
-; 出简规则 0不|1出简不出全|2出简保留全码|3出简全码置后
-
+; 出简形式 0不|1出简不出全|2出简保留全码|3出简全码置后
+JmType = 1
+; 出简规则 默认1，空无限
+JmRule = 1:0,2:3,3:2,6:
 
 ; 按编码排序
 Sort = 0
@@ -61,11 +62,6 @@ Sort = 0
 [Check]
 ; 校验已有的多多格式词库
 >>(091.txt)
-
-[Correct]
-; 对音码方案，一个词可能生成多个编码，可以在这里修正
-人参	rkiz
-给予	jiyu gvyu
 
 [Char]
 ; 生成编码所需，每个字可以有多个编码
