feat: 支持简码生成

--- a/sample/sample.ini
+++ b/sample/sample.ini
@@ -31,13 +31,15 @@ Rule = :n1+n2..
 ; 双拼？空格分隔（用_代替）
 Rule = :N.._
 
-; 出简形式 0不|1出简不出全|2出简保留全码|3出简全码置后
-JmType = 1
-; 出简规则 默认1，空无限
-JmRule = 1:0,2:3,3:2,6:
+; 保留单字全码 0不保留|1保留
+保留单字全码 = false
+; 单字简码规则 默认1，空无限
+单字简码规则 = 1:3,2:2,4:
+; 词组简码规则（不保留全码）
+词组简码规则 = 1:0,2:0,3:0,4:
 
-; 按编码排序
-Sort = 0
+; 按编码重新排序
+Sort = true
 
 [Dict]
 ; 主要码表部分
