--- a/sample/星辰双拼.ini
+++ b/sample/星辰双拼.ini
@@ -5,7 +5,14 @@ Rule = 2:A+B, \
     :A1+B1+C1+Z1
 
 ; 按编码排序
-Sort = 0
+Sort = true
+
+; 保留单字全码 0不保留|1保留
+保留单字全码 = true
+; 单字简码规则 默认1，空无限
+单字简码规则 = 1:3,2:2,4:
+; 词组简码规则（不保留全码）
+词组简码规则 = 1:0,2:0,3:1,4:
 
 [Dict]
 ; 主要码表部分
