perf: 使用相对路径导入

--- a/sample/86五笔.ini
+++ b/sample/86五笔.ini
@@ -1,11 +1,18 @@
 [Config]
-; 自动生成编码规则
+; 编码规则
 Rule = 2:a1+a2+b1+b2, \
     3:a1+b1+c1+c2, \
     :a1+b1+c1+z1
 
+; 保留单字全码 true|false
+保留单字全码 = false
+; 单字简码规则
+单字简码规则 = 1:2,4:
+; 词组简码规则（不保留全码）
+词组简码规则 = 1:0,2:0,3:1,4:
+
 ; 按编码排序
-Sort = 1
+Sort = true
 
 [Dict]
 ; 主要码表部分
@@ -114,13 +121,5 @@ Sort = 1
 阿瑙托维奇
 
 [Char]
-; 生成编码所需，每个字可以有多个编码
-; 对形码来说是单字全码
-; 对双拼，辅助码（可以生成单字编码）
-; 对两笔，后三码
->>(sample/wubi86.txt)
-
-[Mapping]
-; 双拼或者两笔生成词组所需的拼音映射表
-; 下例大牛双拼
-; 按键(大写)基础映射
+; 单字全码
+>>(./wubi86.txt)
