--- a/sample/星辰双拼.ini
+++ b/sample/星辰双拼.ini
@@ -1,25 +1,25 @@
 [Config]
-; 自动生成编码规则
+; 编码规则
 Rule = 2:A+B, \
     3:A1+A2+B1+C1, \
     :A1+B1+C1+Z1
 
+; 保留单字全码 true|false
+保留单字全码 = false
+; 单字简码规则
+单字简码规则 = 1:3,4:
+; 词组简码规则（不保留全码）
+词组简码规则 = 1:0,2:0,4:
+
 ; 按编码排序
 Sort = true
 
-; 保留单字全码 0不保留|1保留
-保留单字全码 = true
-; 单字简码规则 默认1，空无限
-单字简码规则 = 1:3,2:2,4:
-; 词组简码规则（不保留全码）
-词组简码规则 = 1:0,2:0,3:1,4:
-
 [Dict]
 ; 主要码表部分
+?>>(./小轻多音字频.txt)
 人参	rkiz
 给予	jiyu
 给予	gvyu
-?>>(sample/小轻多音字频.txt)
 阿敖
 阿巴巴
 阿巴巴巴
@@ -34,7 +34,7 @@ Sort = true
 ; 对形码来说是单字全码
 ; 对双拼，辅助码（可以生成单字编码）
 ; 对两笔，后三码
->>(sample/星笔辅码8105.txt)
+>>(./星笔辅码8105.txt)
 
 [Mapping]
 ; 双拼或者两笔生成词组所需的拼音映射表
