--- a/sample/星空键道6.ini
+++ b/sample/星空键道6.ini
@@ -1,26 +1,33 @@
 [Config]
-; 自动生成编码规则
+; 编码规则
 ; 键道6顶功, Y 2码 X 4码
 ; sssbbb
 Rule = 2:A+B+a1+b1, \
     3:A1+B1+C1+a1+b1+c1, \
     :A1+B1+C1+Z1+a1+b1
 
+; 保留单字全码 true|false
+保留单字全码 = true
+; 单字简码规则
+单字简码规则 = 6:
+; 词组简码规则（不保留全码）
+词组简码规则 = 1:0,2:0,3:0,6:
+
 ; 按编码排序
-Sort = 1
+Sort = true
 
 [Dict]
 ; 主要码表部分
 
 [Check]
->>(D:\code\others\Rime_JD\rime\xkjd6.cizu.dict.yaml)
+; >>(D:\code\others\Rime_JD\rime\xkjd6.cizu.dict.yaml)
 
 [Char]
 ; 生成编码所需，每个字可以有多个编码
 ; 对形码来说是单字全码
 ; 对双拼，辅助码（可以生成单字编码）
 ; 对两笔，后三码
->>(sample/xkjd6.txt)
+>>(./xkjd6.txt)
 
 [Mapping]
 ; 双拼或者两笔生成词组所需的拼音映射表
