chore: 添加示例文件

--- a/sample/哲豆音形.ini
+++ b/sample/哲豆音形.ini
@@ -13,6 +13,9 @@ Rule = 2:A+a1+B+b1, \
 
 Sort = true
 
+[Check]
+>>(../test/zzdyx_perfect.dict.yaml)
+
 [Dict]
 最好
 去哪里
@@ -21,11 +24,6 @@ Sort = true
 火
 贞
 贞子
-
-[Check]
-
-[Correct]
-; 对音码方案，一个词可能生成多个编码，可以在这里修正
 
 [Char]
 ; 对两笔，后三码
