--- a/sample/星空键道6.ini
+++ b/sample/星空键道6.ini
@@ -16,11 +16,11 @@ Rule = 2:A+B+a1+b1, \
 ; 按编码排序
 Sort = true
 
+[Check]
+>>(D:\code\others\Rime_JD\rime\xkjd6.cizu.dict.yaml)
+
 [Dict]
 ; 主要码表部分
-
-[Check]
-; >>(D:\code\others\Rime_JD\rime\xkjd6.cizu.dict.yaml)
 
 [Char]
 ; 生成编码所需，每个字可以有多个编码
