--- a/sample/星辰双拼.ini
+++ b/sample/星辰双拼.ini
@@ -1,7 +1,7 @@
 [Config]
 ; 编码规则
 Rule = 2:A+B, \
-    3:A1+A2+B1+C1, \
+    3:A1+B1+C1+C2, \
     :A1+B1+C1+Z1
 
 ; 保留单字全码 true|false
@@ -14,20 +14,13 @@ Rule = 2:A+B, \
 ; 按编码排序
 Sort = true
 
+[Check]
+>>(../test/星辰星笔.txt)
+
 [Dict]
 ; 主要码表部分
 ?>>(./小轻多音字频.txt)
-人参	rkiz
-给予	jiyu
-给予	gvyu
-阿敖
-阿巴巴
-阿巴巴巴
-阿坝师范
-阿巴特
-阿贝多
-排面
-还很
+>>(./BBC汉语常用词.txt)
 
 [Char]
 ; 生成编码所需，每个字可以有多个编码
