--- a/sample/86五笔.ini
+++ b/sample/86五笔.ini
@@ -15,110 +15,8 @@ Rule = 2:a1+a2+b1+b2, \
 Sort = true
 
 [Dict]
-; 主要码表部分
-阿敖
-阿巴巴
-阿巴巴巴
-阿坝师范
-阿巴特
-阿贝多
-阿渤
-阿波卡利斯
-阿波连
-阿波罗尼亚
-阿波尼亚
-阿波舞
-阿不都沙拉木
-阿不福思
-阿部宽
-阿布拉莫维奇
-阿布索留特
-阿达克
-阿达娃
-阿黛尔的生活
-阿呆芙
-阿黛拉
-阿旦
-阿德拉
-阿德里
-阿德里安
-阿德托昆博
-阿德耶米
-阿迪娜
-阿迪萨亚
-阿窦
-阿尔本
-阿尔丹
-阿尔法小队
-阿尔沙文
-阿尔泰尔
-阿尔特塔
-阿尔兹
-阿翡
-阿富汗人
-阿富汗战争
-阿芙精油
-阿改
-阿干镇
-阿戈尔
-阿格拉玛
-阿根廷人
-阿公公
-阿哈湖
-阿哈利姆
-阿合娜尔
-阿贺野
-阿护
-阿化
-阿怀
-阿纪
-阿基蕾拉
-阿吉野马
-阿金斯
-阿卡多
-阿克伦
-阿克塞尔
-阿克尚
-阿克希亚
-阿拉哈托
-阿拉曼
-阿拉山
-阿拉斯猪
-阿拉猪
-阿莱格里
-阿来路亚
-阿兰德龙
-阿兰娜
-阿劳霍
-阿雷奥拉
-阿肋路亚
-阿里阿德涅
-阿莉埃蒂
-阿里衮
-阿里森
-阿利松
-阿里松
-阿里云盘
-阿连德
-阿列克谢
-阿泠
-阿瑠
-阿留申
-阿鲁卡
-阿鲁科尔沁
-阿洛伊斯
-阿驴
-阿玛菲
-阿玛雅
-阿妈粽
-阿迈威
-阿茂
-阿美莉卡
-阿门阿前
-阿莫罗芬
-阿莫斯之弓
-阿娜尔罕
-阿瑙托维奇
+>>(./字频表.txt)
+>>(./BBC汉语常用词.txt)
 
 [Char]
 ; 单字全码
